--- a/themes/vintage/scripts.pug
+++ b/themes/vintage/scripts.pug
@@ -1,5 +1,5 @@
 .scripts
 script(src='https://code.jquery.com/jquery.min.js')
-script(type='text/javascript', src='/public/food/food-app.js')
+script(type='text/javascript', src='/public/vintage/vintage-app.js')
 
 //- Add script files below
