--- a/themes/vintage/styles.pug
+++ b/themes/vintage/styles.pug
@@ -1,5 +1,5 @@
 .styles
-link(rel='stylesheet', type='text/css', href='/public/food/food-style.css')
+link(rel='stylesheet', type='text/css', href='/public/vintage/vintage-style.css')
 link(href='https://fonts.googleapis.com/css?family=Merriweather|Ubuntu:400,700' rel='stylesheet')
 script(src='https://use.fontawesome.com/06476ec048.js')
 
