--- a/app/public/default/default-style.css
+++ b/app/public/default/default-style.css
@@ -131,33 +131,34 @@ div.nav-link:hover, #project-close:hover {
 	width: 36px;
 }
 
+#results {
+	width: 100%;
+}
+
 div.project-item {
-	background: rgba(255,255,255,0.95);
+	/*background: rgba(255,255,255,0.95);*/
+	background-color: white;
 	filter: gray;
 	filter: grayscale(100%);
-	max-width: 340px;
-	width: 99%;
-	max-height: 320px;
-	min-height: 320px;
-	height: 99%;
-	margin: 7px;
+	width: 107%;
+	margin: 5px 0 15px -10px;
 	padding: 15px 20px;
 	text-align: left;
-	vertical-align: top;
 }
 
 div.project-item p {
-	background-color: white;
-	border-bottom: 1px solid lightgrey;
+	display: block;
 	color: black;
-	margin: 0;
-	padding: 8px;
+	margin: 5px;
+	padding: 5px;
 }
 
 .img-box {
 	background-color: white;
-	max-height: 250px;
-	min-height: 250px;
+	float: left;
+	max-width: 400px;
+	margin-right: 15px;
+	margin-bottom: 15px;
 	height: 100%;
 	overflow: hidden;
 }
@@ -165,7 +166,7 @@ div.project-item p {
 .project-image {
 	display: block;
 	margin: auto;
-	min-width: 300px;
+	min-width: 400px;
 }
 
 .proj-img-box {
@@ -220,7 +221,6 @@ h3, #project-container {
 
 #portfolio-box {
 	width: 94%;
-	margin: auto;
 	padding-top: 20px;
 	margin-top: 20px;
 }
@@ -236,6 +236,8 @@ h3, #project-container {
 }
 
 .project-name {
+	font-family: 'Merriweather', sans-serif;
+	font-weight: bold;
 	color: white;
 	text-align: center;
 	font-size: 18px;
@@ -244,35 +246,30 @@ h3, #project-container {
 #proj-desc, .links, #proj-name {
 	display: inline-block;
 	margin: 4px 5px;
-	width: 68%;
+
 }
 
 #proj-name {
 	font-size: 20px;
 }
 
-#proj-livelink:hover, #proj-codeurl:hover {
+.proj-livelink:hover, .proj-codelink:hover {
 	font-weight: bold;
 }
 
 .skill-box {
+	clear: left;
 	color: #404040;
-	background: transparent;
 	font-style: italic;
-	position: relative;
-	height: 280px;
-	top: -298px;
-	width: 100%;
-	margin: 10px 0;
-	opacity: 0;
-	padding: 20px 15px;
+	margin-top: 15px;
+	padding: 15px;
 	white-space: normal;
 }
 
-.skill-box:hover {
+/*.skill-box:hover {
 	background: rgba(255,255,255,0.70);
 	opacity: 1;
-}
+}*/
 
 .eye {
 	color: #6B6B6B;
@@ -345,14 +342,12 @@ p.powered a:hover {
 		width: 80%;
 	}
 
-	#project-container {
-		padding-left: 4%;
-	}
-
-	.proj-img-box {
+	.img-box {
+		display: block;
+		float: none;
 		width: 99%;
+		max-height: 280px;
 		margin: 5px auto;
-		text-align: center;
 	}
 
 	#proj-img {
@@ -364,8 +359,7 @@ p.powered a:hover {
 	}
 
 	div.project-item {
-		max-width: 500px;
-		width: 85%;
+		width: 97%;
 		display: inline-block;
 		margin: 7px;
 	}
@@ -375,7 +369,9 @@ p.powered a:hover {
 @media only screen and (max-width: 500px) {
 
 	#nav {
-		right: 1%;
+		margin-top: 15px;
+		position: static;
+		text-align: center;
 	}
 
 	.contact-links {
@@ -400,10 +396,12 @@ p.powered a:hover {
 		width: 90%;
 	}
 
-	.proj-img-box {
+	.img-box {
+		display: block;
+		float: none;
 		width: 99%;
+		max-height: 280px;
 		margin: 5px auto;
-		text-align: center;
 	}
 
 	#proj-img {
@@ -416,7 +414,6 @@ p.powered a:hover {
 
 	div.project-item {
 		display: inline-block;
-		max-width: 550px;
 		margin: 7px;
 		width: 95%;
 	}
