--- a/themes/default/project-list.pug
+++ b/themes/default/project-list.pug
@@ -14,11 +14,12 @@ div(class='template hidden')
         div(class='img-box')
             img(class='project-image' )
         p(class='project-name')
-            p(class='links')
-                a(class='proj-livelink')
-                    span Live Link
-                span  |  
-                a(class='proj-codelink')
-                    span Code Link
-            p(class='project-description')
+        p(class='links')
+            a(class='proj-livelink')
+                span Live Link
+            span  |  
+            a(class='proj-codelink')
+                span Code Link
         div(class='skill-box')
+        hr(class='desc-bar')
+        p(class='project-description')
