--- a/app/public/default/default-style.css
+++ b/app/public/default/default-style.css
@@ -145,17 +145,21 @@ div.project-item {
 	text-align: left;
 }
 
-div.project-item p {
+hr.desc-bar {
+	margin: 20px;
+	width: 40%;
+}
+
+p.project-description, p.project-description p {
 	display: block;
-	color: black;
 	margin: 5px;
-	padding: 5px;
+
 }
 
 .img-box {
 	background-color: white;
 	float: left;
-	max-width: 400px;
+	max-width: 370px;
 	margin-right: 15px;
 	margin-bottom: 15px;
 	height: 100%;
@@ -205,16 +209,16 @@ h3, #project-container {
 }
 
 .project-name {
+	color: #B3EE3A;
 	font-family: 'Merriweather', sans-serif;
 	font-weight: bold;
-	color: white;
-	text-align: center;
-	font-size: 18px;
+	font-size: 20px;
+	margin: 3px;
 }
 
 .links {
 	display: inline-block;
-	margin: 4px 5px;
+	margin: 4px 0px;
 }
 
 .proj-livelink:hover, .proj-codelink:hover {
@@ -222,12 +226,11 @@ h3, #project-container {
 }
 
 .skill-box {
-	clear: left;
 	color: #404040;
 	font-style: italic;
-	margin-top: 15px;
-	padding: 15px;
-	text-align: right;
+	font-size: 15px;
+	margin: 0px;
+	padding: 0px;
 	white-space: normal;
 }
 
@@ -301,12 +304,12 @@ p.powered a:hover {
 		margin: 5px auto;
 	}
 
-	#proj-img {
-		width: 100%;
+	.project-name {
+		text-align: center;
 	}
 
-	#proj-name, #proj-desc {
-		width: 95%;
+	hr.desc-bar {
+		width: 80%;
 	}
 
 	div.project-item {
@@ -355,12 +358,8 @@ p.powered a:hover {
 		margin: 5px auto;
 	}
 
-	#proj-img {
-		width: 100%;
-	}
-
-	#proj-name, #proj-desc {
-		width: 95%;
+	hr.desc-bar {
+		width: 80%;
 	}
 
 	div.project-item {
