--- a/app/public/vintage/vintage-style.css
+++ b/app/public/vintage/vintage-style.css
@@ -171,7 +171,7 @@ div.project-item p {
 
 .proj-img-box {
 	height: 250px;
-	width: 200px;
+	width: 250px;
 	float: right;
 	margin-bottom: 20px;
 	overflow: hidden;
@@ -243,9 +243,9 @@ h3, #project-container {
 }
 
 #proj-desc, .links, #proj-name {
-	display: inline-block;
+	display: block;
 	margin: 4px 5px;
-	width: 67%;
+	width: 65%;
 }
 
 #proj-name {
