--- a/themes/default/project-list.pug
+++ b/themes/default/project-list.pug
@@ -15,10 +15,10 @@ div(class='template hidden')
             img(class='project-image' )
         p(class='project-name')
         p(class='links')
-            a(class='proj-livelink')
+            a(class='proj-livelink', target='_blank')
                 span Live Link
             span  |  
-            a(class='proj-codelink')
+            a(class='proj-codelink', target='_blank')
                 span Code Link
         div(class='skill-box')
         hr(class='desc-bar')
