--- a/app/public/default/default-style.css
+++ b/app/public/default/default-style.css
@@ -153,7 +153,6 @@ hr.desc-bar {
 p.project-description, p.project-description p {
 	display: block;
 	margin: 5px;
-
 }
 
 .img-box {
@@ -162,7 +161,7 @@ p.project-description, p.project-description p {
 	max-width: 370px;
 	margin-right: 15px;
 	margin-bottom: 15px;
-	height: 100%;
+	height: 300px;
 	overflow: hidden;
 }
 
@@ -170,6 +169,7 @@ p.project-description, p.project-description p {
 	display: block;
 	margin: auto;
 	min-width: 400px;
+	max-height: 300px;
 }
 
 .proj-img-box {
@@ -219,6 +219,10 @@ h3, #project-container {
 .links {
 	display: inline-block;
 	margin: 4px 0px;
+}
+
+.links a {
+	color: black;
 }
 
 .proj-livelink:hover, .proj-codelink:hover {
